--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "blob-stream": "^0.1.3",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.4.4",
     "crypto-js": "^4.2.0",
@@ -48,7 +49,7 @@
     "react-hotkeys-hook": "^4.5.0",
     "react-i18next": "^15.0.1",
     "react-icons": "^4.12.0",
-    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.11.2",
