--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "reactstrap": "^9.1.10",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "simplebar": "^6.2.7",
+    "simplebar-react": "^3.2.6",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
