--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
